minikube/08-service-ingress/deploy-ecr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api
  template:
    metadata:
      labels:
        app: nodejs-api
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: nodejs-api-container
          image: 986154984217.dkr.ecr.ap-northeast-1.amazonaws.com/container-nodejs-api-8000:v1.0.5
          ports:
            - containerPort: 8000
